# ucUpdater

./: CMakeLists.txt
spdlog-1.9.2/src/: cfg.cpp
usUpdater/src/: CMakeLists.txt  main.cpp
